--- a/src/main/resources/templates/confirm-order.html
+++ b/src/main/resources/templates/confirm-order.html
@@ -41,8 +41,6 @@
                                 <td class="bg_dark email-section" style="text-align:center;">
                                     <div class="heading-section heading-section-white">
                                         <h2>
-                                            <img src="http://app.grizzly-api.com/assets/images/logo/white-logo.png" height="50" width="50"
-                                                alt="our logo" style="vertical-align: middle;">
                                             <span th:text="${titleMessage}"
                                                 style="vertical-align: middle; padding: 20px;"></span>
                                         </h2>
@@ -59,6 +57,10 @@
                                     </div>
                                     <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
                                         <tr>
+                                        <tr th:each="savedOrder : ${savedOrder}">
+            							<td th:text="${savedOrder.getId()}"></td>
+            							<td th:text="${savedOrder.getTotalPrice()}">Text ...</td>
+       									</tr>
 
                                             <td valign="top" width="50%" style="padding-top: 20px;">
                                                 <table role="presentation" cellspacing="0" cellpadding="0" border="0"
